# ProManage

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  前端多项目管理工具开发计划书.md
.github/workflows/: release.yml
docs/: updater.md
docs/examples/: latest.json
scripts/: bump-version.mjs  prepare-release.mjs
src/: App.vue  i18n.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  health.rs  lib.rs  log.rs  main.rs  port.rs  process.rs  project.rs  scheduler.rs  types.rs
src/api/: commands.ts
src/assets/: main.css
src/components/: ProjectCard.vue  ProjectFormModal.vue  TerminalPanel.vue
src/stores/: project.ts
src/types/: project.ts
src/utils/: notifications.ts  ports.ts  runtime.ts
src/views/: LogPanel.vue  ProjectList.vue  SettingsView.vue
